Mas parse y impresion de main!